copy paste error correct

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,4 +22,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-        start-LACS = LACS-node:main.main
+        start-LACS_node = LACS_node:main.main
