--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,8 @@ description = An extension of LACS for another server to replicate firewall chan
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Snapwhiz914/LACS-node
-project_urls =
-    Bug Tracker = https://github.com/Snapwhiz914/LACS-node/issues
+#project_urls =
+#    Bug Tracker = https://github.com/Snapwhiz914/LACS-node/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GPL License
