package name cannot have a dash in it

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = LACS-node
+name = LACS_node
 version = 1.0
 author = L
 description = An extension of LACS for another server to replicate firewall changes too
